--- a/vercel.json
+++ b/vercel.json
@@ -14,7 +14,7 @@
   ],
   "functions": {
     "api/*": {
-      "maxDuration": 60 // Duración máxima en segundos
+      "maxDuration": 120
     }
   }
 }
