--- a/vercel.json
+++ b/vercel.json
@@ -14,7 +14,7 @@
   ],
   "functions": {
     "api/*": {
-      "maxDuration": 10 
+      "maxDuration": 10 // Configura este valor a 10 segundos para el plan gratuito
     }
   }
 }
