--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "apify-client": "^2.9.4",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
+    "axios": "^0.21.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
